# malign

./: .codacy.yml  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  RELEASE_SPEC.md  old_demo.py  pyproject.toml  requirements.txt  run_coverage.sh  setup.py  tiago.json  workbench.py
.github/workflows/: CI.yml  python-package.yml  quality.yml
docs/: API_REFERENCE.md  Align experiment.ipynb  Demo.ipynb  LLM_DOCUMENTATION.md  Malign.ipynb  USER_GUIDE.md  algorithm_selection_guide.md  devel.ipynb  ita_grk.matrix  ita_rus.matrix  ita_rus_grk.matrix  tutorial_1_basics.html  tutorial_1_basics.py  tutorial_2_matrices.html  tutorial_2_matrices.py  tutorial_3_learning.html  tutorial_3_learning.py  tutorial_4_advanced.py
examples/: dna.py  italic.py  itarus.py
malign/: __init__.py  __main__.py  alignment.py  anw.py  dumb.py  kbest.py  learning.py  malign.py  matrix.py  metrics.py  nw.py  scoring_matrix.py  utils.py  yenksp.py
resources/: northeuralex_italic.tsv
resources/bdpa/: README.md  andean.tsv  bai.tsv  bulgarian.tsv  dutch.tsv  french.tsv  germanic.tsv  japanese.tsv  norwegian.tsv  ob-ugrian.tsv  romance.tsv  sinitic.tsv  slavic.tsv
resources/cmudict/: README.md
resources/neurodecipher/: README.md  greek_linearb.tsv
resources/northeuralex/: README.md  italic_by_cogid.tsv  italic_by_gloss.tsv
resources/wiktionary/: README.md
scripts/: analyze_gold_data.py  benchmarks.py  extract_test_data.py
src/malign/: __init__.py  __main__.py  alignment.py  anw.py  dumb.py  malign.py  scoring_matrix.py  utils.py  yenksp.py
tests/: gold_data_utils.py  test_alignment.py  test_anw.py  test_builders.py  test_demo.py  test_dumb.py  test_integration.py  test_learning.py  test_learning_comparison.py  test_malign.py  test_matrix.py  test_matrix_learning.py  test_metrics.py  test_property_based.py  test_regression.py  test_utils.py  test_yenksp.py
tests/data/: README.md
tests/data/cognates/: integration_examples.yml  learning_eval_set.yml  learning_training_set.yml  regression_test_set.yml
